--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <!--разные цвета и два слова или картинка? убрать линию и добавить ссылку-->
+        <a href="">
+            webstudio
+        </a>
+
+        <ul>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+        </ul>
+
+    </header>
 </body>
 </html>
