07122022-2351 done with structure

--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
 </head>
 <body>
     <header>
-        <!--разные цвета и два слова или картинка? убрать линию и добавить ссылку-->
-        <a href="">
+        <nav>
+        <!--різні кольори, слова чи картинка? прибрати лінію і додати посилання-->
+            <a href="">
             webstudio
-        </a>
+            </a>
+
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+        </nav>
 
         <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+            <!--перевірити класи-->
+            <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+            <li><a href="tel:+11 (000) 111-11-11" class="contact-link">+11 (000) 111-11-11</a></li>
         </ul>
 
     </header>
