--- a/index.html
+++ b/index.html
@@ -24,9 +24,98 @@
         <ul>
             <!--перевірити класи-->
             <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-            <li><a href="tel:+11 (000) 111-11-11" class="contact-link">+11 (000) 111-11-11</a></li>
+            <li><a href="tel:+11(000)111-11-11" class="contact-link">+11 (000) 111-11-11</a></li>
         </ul>
 
     </header>
+
+    <main>
+
+    <div>
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+    </div>
+
+    <section>
+        <ul>
+            <li>
+                <h2>Our Principles</h2> <!--залишити для css і сховати-->
+                <h3>Strategy</h3> 
+                <p>Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution. </p>
+            </li>
+            <li>
+                <h3>Punctuality</h3> 
+                <p>Bring the key message to the brand's audience for the best price 
+                    within the shortest possible time.</p>
+            </li>
+            <li>
+                <h3>Diligence</h3> 
+                <p>Research and confirm brands that present the strongest digital 
+                    growth opportunities and minimize risk.</p>
+            </li>
+            <li>
+                <h3>Technologies</h3> 
+                <p>Design practice focused on digital experiences. We bring 
+                    forth a deep passion for problem-solving.</p>
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>What are we doing</h2>
+        <ul>
+            <li>
+                <img src="./images/Rectangle71.jpg" alt="computer monitor" width="360">
+            </li>
+            <li>
+                <img src="./images/Rectangle72.jpg" alt="mobile phone sreens" width="360">
+            </li>
+            <li>
+                <img src="./images/Rectangle73.jpg" alt="laptop and smartphone" width="360">
+            </li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Our Team</h2>
+        <ul>
+            <li>
+                <img src="./images/img1.jpg" alt="Mark Guerrero" width="264">
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="./images/img2.jpg" alt="Tom Ford" width="264">
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./images/img3.jpg" alt="Camila Garcia" width="264">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/img4.jpg" alt="Daniel Wilson" width="264">
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
+
+    </main>
+
+    <footer>
+        <a href="">
+            webstudio
+        </a>
+        <p>
+            Increase the flow of customers and 
+            sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
+
 </body>
 </html>
